--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,3 +3,10 @@
 ---
 
 @import 'jekyll-theme-hacker'
+
+  @font-face {
+    font-family: F16;
+    src: url("../home/F16_Panel Font.ttf") format('truetype');
+    font-weight: bold;
+    font-style: normal;
+}
