--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,8 +4,12 @@
 
 @import "{{ site.theme }}";
 
-header {
-  display: none;
+footer {
+  display: none !important;
+}
+
+.btn {
+  display: none !important;
 }
 
   
