--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -27,3 +27,17 @@ footer {
 body {
       font-family: "Times New Roman", Times, serif;
 }
+
+html, body {
+  background: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  color: white;
+  font-family: 'Times New Roman', serif;
+  font-size: 18px;
+  
+}
