--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,6 +5,12 @@
 @import "{{ site.theme }}";
 
 
+.page-header{
+color:#ffff;
+background-color:#A067AB;
+background-image:linear-gradient(120deg,#5073B8,#A067AB);
+}
+
 header {
   display: none;
 }
