--- a/_sass/_default_colors.scss
+++ b/_sass/_default_colors.scss
@@ -3,7 +3,7 @@ $alto: #d0d0d0;
 $bouquet: #aa759f;
 $chelsea-cucumber: #90a959;
 $cod-grey: #151515;
-$conifer: #ff1a1a;
+$conifer: #0000e6;
 $dove-grey: #666;
 $gallery: #eaeaea;
 $grey: #888;
