--- a/_sass/jekyll-theme-hacker.scss
+++ b/_sass/jekyll-theme-hacker.scss
@@ -14,6 +14,8 @@ $container-max-width: 1200px;
   }
 }
 
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/aaaakshat/cm-web-fonts@latest/fonts.css">
+
 body {
   margin: 0;
   padding: 0;
@@ -21,7 +23,7 @@ body {
   color: $body-foreground;
   font-size: 16px;
   line-height: 1.5;
-  font-family: Monaco, 'Times New Roman', serif, Terminal, monospace;
+  font-family: Monaco, 'Computer Modern Serif', serif, Terminal, monospace;
 }
 
 /* General & 'Reset' Stuff */
