--- a/_sass/jekyll-theme-hacker.scss
+++ b/_sass/jekyll-theme-hacker.scss
@@ -14,7 +14,6 @@ $container-max-width: 1200px;
   }
 }
 
-<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/aaaakshat/cm-web-fonts@latest/fonts.css">
 
 body {
   margin: 0;
@@ -23,7 +22,7 @@ body {
   color: $body-foreground;
   font-size: 16px;
   line-height: 1.5;
-  font-family: Monaco, 'Computer Modern Serif', serif, Terminal, monospace;
+  font-family: Monaco, "Brush Script MT", cursive, Terminal, monospace;
 }
 
 /* General & 'Reset' Stuff */
@@ -109,7 +108,7 @@ section img {
 
 h1, h2, h3, h4, h5, h6 {
   font-weight: normal;
-  font-family: Monaco, 'Times New Roman', serif, Terminal, monospace;
+  font-family: Monaco, "Brush Script MT", cursive, Terminal, monospace;
   color: $header;
   letter-spacing: -0.03em;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1),
