--- a/_sass/jekyll-theme-hacker.scss
+++ b/_sass/jekyll-theme-hacker.scss
@@ -22,7 +22,7 @@ body {
   color: $body-foreground;
   font-size: 16px;
   line-height: 1.5;
-  font-family: Monaco, "Brush Script MT", cursive, Terminal, monospace;
+  font-family: Monaco, "Comic Sans MS", "Comic Sans", cursive, Terminal, monospace;
 }
 
 /* General & 'Reset' Stuff */
