--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,8 +17,8 @@
           <h1>{{ site.title | default: site.github.repository_name }}</h1>
         </a>
         <h2>{{ site.description | default: site.github.project_tagline }}</h2>
-      </div> 
-    </header> -->
+      </div> -->
+    </header> 
 
     <div class="container">
       <section id="main_content">
