--- a/_sass/_default_colors.scss
+++ b/_sass/_default_colors.scss
@@ -1,7 +1,7 @@
 $apple-blossom: #ac4142;
 $alto: #d0d0d0;
 $bouquet: #aa759f;
-$chelsea-cucumber: #90a959;
+$chelsea-cucumber: #3EAE87;
 $cod-grey: #151515;
 $conifer: #53E8B5;
 $dove-grey: #666;
